--- a/index.html
+++ b/index.html
@@ -1,5 +1,3 @@
-
-</html>
 <!DOCTYPE html>
 <html lang="en">
 
@@ -10,8 +8,6 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
-    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
     <style>
         body {
             font-family: 'Roboto', sans-serif;
@@ -44,7 +40,6 @@
             background-color: #2b6cb0;
         }
     </style>
-    
 </head>
 
 <body>
@@ -94,7 +89,8 @@
         <div class="container mx-auto">
             <h2 class="text-3xl font-bold mb-8">Join the Waitlist</h2>
             <form name="waitlist" method="POST" data-netlify="true" class="w-full md:w-1/2 mx-auto">
-                <input type="email" id="email" name="email" placeholder="Enter your email" required class="w-full p-3 rounded-full text-black mb-4">
+                <input type="hidden" name="form-name" value="waitlist">
+                <input type="email" name="email" placeholder="Enter your email" required class="w-full p-3 rounded-full text-black mb-4">
                 <button type="submit" class="btn-primary w-full py-3 rounded-full">Join Waitlist</button>
             </form>
         </div>
@@ -116,3 +112,4 @@
 </body>
 
 </html>
+
