--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-database.js"></script>
     <style>
         body {
             font-family: 'Roboto', sans-serif;
@@ -40,12 +42,66 @@
             background-color: #2b6cb0;
         }
     </style>
+    <script>
+        // Replace with your Firebase configuration
+        const firebaseConfig = {
+            apiKey: "AIzaSyCLgQZfyNoP9kB7wcHYrxXGpf5EuhHRlYU",
+            authDomain: "fling-dc99d.firebaseapp.com",
+            databaseURL: "https://fling-dc99d-default-rtdb.firebaseio.com",
+            projectId: "fling-dc99d",
+            storageBucket: "fling-dc99d.appspot.com",
+            messagingSenderId: "110170541743",
+            appId: "1:110170541743:web:51fce24d75b422ffdc0e5a",
+            measurementId: "G-2WBR39VH5C"
+        };
+
+        // Initialize Firebase
+        const app = firebase.initializeApp(firebaseConfig);
+        const database = firebase.database();
+
+        // Function to handle form submission
+        function submitForm(event) {
+            event.preventDefault(); // Prevent default form submission
+
+            const email = document.getElementById('email').value;
+
+            // Validate email
+            if (!validateEmail(email)) {
+                alert('Please enter a valid email address.');
+                return;
+            }
+
+            // Store email in Firebase Realtime Database
+            database.ref('emails').push({
+                email: email
+            }).then(() => {
+                // Clear the form field
+                document.getElementById('email').value = '';
+
+                // Display a success message
+                alert('Email submitted successfully!');
+            }).catch((error) => {
+                console.error('Error writing to database:', error);
+                alert('An error occurred. Please try again later.');
+            });
+        }
+
+        // Email validation function
+        function validateEmail(email) {
+            const re = /^[^\s@]+@[^\s@]+\.[^\s@]+$/;
+            return re.test(String(email).toLowerCase());
+        }
+    </script>
 </head>
 
 <body>
     <header class="p-4">
         <div class="container mx-auto flex justify-between items-center">
-            <div class="text-2xl font-bold">Fling AI</div>
+            <div class="text-2xl font-bold">Company Logo</div>
+            <nav class="space-x-4">
+                <a href="signin.html" class="hover:underline">Sign In</a>
+                <a href="signup.html" class="hover:underline">Sign Up</a>
+            </nav>
         </div>
     </header>
 
@@ -88,9 +144,8 @@
     <section id="waitlist" class="py-16 bg-gray-900 text-white text-center">
         <div class="container mx-auto">
             <h2 class="text-3xl font-bold mb-8">Join the Waitlist</h2>
-            <form name="waitlist" method="POST" data-netlify="true" class="w-full md:w-1/2 mx-auto">
-                <input type="hidden" name="form-name" value="waitlist">
-                <input type="email" name="email" placeholder="Enter your email" required class="w-full p-3 rounded-full text-black mb-4">
+            <form id="submit-form" onsubmit="submitForm(event)" class="w-full md:w-1/2 mx-auto">
+                <input type="email" id="email" name="email" placeholder="Enter your email" required class="w-full p-3 rounded-full text-black mb-4">
                 <button type="submit" class="btn-primary w-full py-3 rounded-full">Join Waitlist</button>
             </form>
         </div>
