--- a/index.html
+++ b/index.html
@@ -97,11 +97,7 @@
 <body>
     <header class="p-4">
         <div class="container mx-auto flex justify-between items-center">
-            <div class="text-2xl font-bold">Company Logo</div>
-            <nav class="space-x-4">
-                <a href="signin.html" class="hover:underline">Sign In</a>
-                <a href="signup.html" class="hover:underline">Sign Up</a>
-            </nav>
+            <div class="text-2xl font-bold">FlingAI</div>
         </div>
     </header>
 
